--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 
       let num1 = 10; // int(정수)
       let num2 = 10.1; // float(실수)
+      //2. string type
+      let myName = "김구라";
+      let yourName = "해골";
+
+      //   boolean type
+      let isRun = true; //비교연산의 결과로 만들어지기도 한다.
+      let isWaite = false;
+      // object type
+      let mem = { num: 1, name: "김구라", addr: "노량진" };
+
+      // array type
+      let nums = [10, 20, 30];
+      let names = ["김구라", "해골", "원숭이"];
     </script>
   </body>
 </html>
