--- a/Step02_example.html
+++ b/Step02_example.html
@@ -12,19 +12,28 @@
     <input type="text" id="num2" placeholder="숫자입력...." />
     <span>=</span>
     <strong id="result">0</strong>
+    <button id="resetBtn"">clear</button>
+
     <script>
-      function plus() {
+        const resetBtn = document.getElementById('resetBtn');
         const num1 = document.getElementById("num1");
         const num2 = document.getElementById("num2");
         const result = document.getElementById("result");
-
-        console.log("asdsad");
-        console.log("asdsad");
+     
+        function init()
         {
+            resetBtn.addEventListener('click',()=>{
+            num1.value = "";
+            num2.value = "";
+            result.innerText = "0";
+            })
         }
-        const calc = parseInt(num1.value, 10) + parseInt(num2.value, 10);
-        result.innerText = calc;
-      }
+        function plus() {
+            const calc = parseInt(num1.value, 10) + parseInt(num2.value, 10);
+            result.innerText = calc;
+            console.log("asd");
+        }
+        init();
     </script>
   </body>
 </html>
