--- a/Step03_example.html
+++ b/Step03_example.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      p {
+        border-radius: 5px;
+        background-color: lightcyan;
+      }
+    </style>
   </head>
   <body>
     <h1>plan object 테스트 중</h1>
