--- a/Step12_exampple.html
+++ b/Step12_exampple.html
@@ -13,22 +13,29 @@
       //친구 이름이 들어 있는 배열
       const names = ["김구라", "해골", "원숭이", "주뎅이", "덩어리"];
       /*
-      배열에 들어있는 친구이름을 이용해서 
-      <li>김구라</li>
-      와 같은 요소를 동적으로 만들어서 ul 요소에 append 해 보세요. (페이지 로딩 시점에)
-      */
+            배열에 들어있는 친구이름을 이용해서
+            <li>김구라</li>
+            와 같은 요소를 동적으로 만들어서 ul 요소에 append 해 보세요. (페이지 로딩 시점에)
+            */
       const ulElement = document.querySelector("#friendList");
 
-      //   names.forEach((item) => {
-      //     const li = document.createElement("li");
-      //     li.innerText = item;
-      //     ulElement.appendChild(li);
-      //   });
-
-      for (value of names) {
+      names.forEach((item, index) => {
         const li = document.createElement("li");
-        li.innerText = value;
+        li.innerText = name[index];
         ulElement.appendChild(li);
+      });
+
+      const caster = [
+        { 이름: "우마", 플랫폼: "유튜브" },
+        { 이름: "공혁준", 플랫폼: "유튜브" },
+      ];
+
+      const game = {
+        이름: "와우",
+        개발자: ["wach", "sen"],
+      };
+      for (let value of game) {
+        console.log(value);
       }
     </script>
   </body>
