--- a/Step11_ECMA_3.html
+++ b/Step11_ECMA_3.html
@@ -48,6 +48,22 @@
         });
         return array;
       })();
+      //result4 와 result5의 차이는?
+      //result5 와 result5()의 차이를 알아야할것. 즉시 함수 실행은 한 번 실행하고 다시 실행 하지않음.
+      //result5는 값을 한 번 할당받고 더이상 수정 하지 않음. 로딩될때 실행하면서 값을 return으로 받기 때문
+      // result5()는 함수는?
+      
+       let result5 = () => {
+        const array = [];
+        nums.forEach((item) => {
+          if (item % 3 == 0) {
+            array.push(item);
+          }
+        });
+        console.log("왜안나오지");
+        return array;
+      };
+
     </script>
   </body>
 </html>
