펼침연산자 추가

--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
         const index = items.indexOf(removale);
         return items.slice(0, index).concat(items.slice(index + 1));
       }
+
+      const book = ["Reasons and Persons", "Derek Parfit", 19.99, "2020-05-21"];
+      function oldFormatBook(book[0],book[1],book[2])
+      {
+
+      };
+      function formatBook(title, author, price, d) {
+        return `${title} by ${author} $${price} 출판일 ${d}`;
+      }
     </script>
   </body>
 </html>
