jqueary, bootstrap added

--- a/index.html
+++ b/index.html
@@ -43,13 +43,11 @@
       }
 
       const book = ["Reasons and Persons", "Derek Parfit", 19.99, "2020-05-21"];
-      function oldFormatBook(book[0],book[1],book[2])
-      {
-
-      };
+      //formatBook(book[0],book[1],book[2],book[3]);
       function formatBook(title, author, price, d) {
         return `${title} by ${author} $${price} 출판일 ${d}`;
       }
+      //formatBook(...book);
     </script>
   </body>
 </html>
