부트스트랩

--- a/Step12_exampl2.html
+++ b/Step12_exampl2.html
@@ -16,6 +16,7 @@
     <input type="text" id="inputMsg" placeholder="할일 입력..." />
     <button id="addBtn">추가</button>
     <ul id="toDolist"></ul>
+    <test> </test>
     <script>
       const addBtn = document.querySelector("#addBtn");
       const toDolist = document.querySelector("#toDolist");
