--- a/Bootstrap05_component.html
+++ b/Bootstrap05_component.html
@@ -3,43 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap04_grid2.htmll</title>
+    <title>Bootstrap05_component.html</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
-    <script defer src="js/jquery-3.5.1.js"></script>
-    <script defer src="js/bootstrap.js"></script>
-    <style>
-      .row > div {
-        border: 1px dotted green;
-      }
-    </style>
   </head>
   <body>
     <div class="container">
       <h1>Alert</h1>
-      <div class="alert alert-success">작업 성공했습니다.</div>
-      <div class="alert alert-danger">에러가 발생했습니다.</div>
-      <a href="#" class="alert-link">다시 시도하기</a>
+      <div class="alert alert-success">
+        작업 성공했습니다.
+      </div>
+      <div class="alert alert-danger">
+        에러가 발생했습니다.
+        <a href="#" class="alert-link">다시 시도하기</a>
+      </div>
+
+      <h1>취소 가능한 Alert</h1>
+      <div class="alert alert-warning alert-dismissible fade show">
+        <strong>주의!</strong> 컨텐츠가 삭제 됩니다.
+        <button class="close" data-dismiss="alert">&times;</button>
+      </div>
+
+      <h1>Badge text</h1>
+      <button type="button" class="btn btn-primary">Notifications <span class="badge badge-danger">4</span></button>
+
+      <h1>Badge link</h1>
+      <a href="#" class="badge badge-primary">primary</a>
+      <a href="#" class="badge badge-success">success</a>
+      <a href="#" class="badge badge-warning">warning</a>
     </div>
-
-    <h1>취소 가능한 Alert</h1>
-    <div class="alert alert-warning alert-dismissible fade show">
-      <strong>주의!</strong>
-      <button class="close" data-dismiss="alert" id="closeBtn">&times;</button>
-    </div>
-
-    <h1>Badge text</h1>
-    <button type="button" class="btn btn-primary">Notifications <span class="badge badge-danger">4</span></button>
-
-    <h1>Badge link</h1>
-    <a href="#" class="badge badge-primary">primary</a>
-    <a href="#" class="badge badge-success">success</a>
-    <a href="#" class="badge badge-warning">warning</a>
-
     <script src="js/jquery-3.5.1.js"></script>
+    <!-- bootstrap javascript 로딩 -->
+    <script src="js/bootstrap.js"></script>
     <script>
-      //   $("#closeBtn").on("click", function () {
-      //     $(this).parent().remove();
-      //   });
+      // $(".close").on("click", function(){
+      //     $(this).parent().fadeOut();
+      // });
     </script>
   </body>
 </html>
